N21-610 sanis seed update to stage (#3918)
* sanis seed update to stage
* rolemapping change

--- a/ansible/roles/schulcloud-server-init/templates/configmap_file_init.yml.j2
+++ b/ansible/roles/schulcloud-server-init/templates/configmap_file_init.yml.j2
@@ -191,20 +191,20 @@ data:
             "displayName" : "SANIS",
             "type" : "oauth",
             "provisioningStrategy": "sanis",
-            "provisioningUrl": "https://api-dienste.niedersachsen-login.schule/v1/person-info",
+            "provisioningUrl": "https://api-dienste.stage.niedersachsen-login.schule/v1/person-info",
             "oauthConfig": {
               "clientId": "'$SANIS_CLIENT_ID'",
               "clientSecret": "'$SANIS_CLIENT_SECRET'",
-              "tokenEndpoint": "https://auth.niedersachsen-login.schule/realms/SANIS/protocol/openid-connect/token",
+              "tokenEndpoint": "https://auth.stage.niedersachsen-login.schule/realms/SANIS/protocol/openid-connect/token",
               "grantType": "authorization_code",
               "scope": "openid",
               "responseType": "code",
               "redirectUri": "https://{{ NAMESPACE }}.cd.dbildungscloud.dev/api/v3/sso/oauth/'$SANIS_SYSTEM_ID'",
-              "authEndpoint": "https://auth.niedersachsen-login.schule/realms/SANIS/protocol/openid-connect/auth",
+              "authEndpoint": "https://auth.stage.niedersachsen-login.schule/realms/SANIS/protocol/openid-connect/auth",
               "provider": "sanis",
-              "logoutEndpoint": "https://auth.niedersachsen-login.schule/realms/SANIS/protocol/openid-connect/logout",
-              "jwksEndpoint": "https://auth.niedersachsen-login.schule/realms/SANIS/protocol/openid-connect/certs",
-              "issuer": "https://auth.niedersachsen-login.schule/realms/SANIS"
+              "logoutEndpoint": "https://auth.stage.niedersachsen-login.schule/realms/SANIS/protocol/openid-connect/logout",
+              "jwksEndpoint": "https://auth.stage.niedersachsen-login.schule/realms/SANIS/protocol/openid-connect/certs",
+              "issuer": "https://auth.stage.niedersachsen-login.schule/realms/SANIS"
             }
           }
       ]);'
