--- a/ansible/roles/schulcloud-server-init/templates/job_init.yml.j2
+++ b/ansible/roles/schulcloud-server-init/templates/job_init.yml.j2
@@ -15,6 +15,11 @@ spec:
             name: api-configmap
         - secretRef:
             name: api-secret
+        env:
+        - name: K8S_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         volumeMounts:
         - name: script
           mountPath: /update.sh
